refactor: Split services, update migrations, prepare for publish

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ DATABASE_URL=
 # Google Cloud Project ID (for Secret Manager)
 GOOGLE_PROJECT_ID=
 
+# Google Cloud Service Credentials (for Secret Manager)
+GOOGLE_APPLICATION_CREDENTIALS=
+
 # Public base URL where webhook providers will send events to this service
 # Example: https://your-service-domain.com/api/incoming-webhooks
 # The final webhook URL given to the user will be WEBHOOK_URL/<webhookProviderId>/<subscribedEventId>
