--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "author": "Agent Base",
   "license": "MIT",
   "dependencies": {
-    "@agent-base/api-client": "^4.0.0",
-    "@agent-base/types": "^6.0.0",
+    "@agent-base/api-client": "latest",
+    "@agent-base/types": "latest",
     "@google-cloud/secret-manager": "^5.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
