--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-base/webhook-store",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Webhook management service with PostgreSQL/pgvector and Google Secret Manager integration",
   "main": "dist/index.js",
   "type": "module",
@@ -26,31 +26,31 @@
   "author": "Agent Base",
   "license": "MIT",
   "dependencies": {
-    "@agent-base/api-client": "latest",
-    "@agent-base/types": "latest",
-    "@google-cloud/secret-manager": "^5.3.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "pg": "^8.11.5",
+    "@agent-base/api-client": "^0.5.0",
+    "@agent-base/types": "^0.10.0",
+    "@google-cloud/secret-manager": "^5.6.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "pg": "^8.15.5",
     "pgvector": "^0.1.8",
     "uuid": "^11.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.11",
-    "@types/pg": "^8.11.6",
+    "@types/node": "^20.17.31",
+    "@types/pg": "^8.11.14",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.6",
     "node-pg-migrate": "^7.9.1",
-    "prettier": "^3.2.5",
-    "tsup": "^8.0.2",
-    "tsx": "^4.9.3",
-    "typescript": "^5.4.5"
+    "prettier": "^3.5.3",
+    "tsup": "^8.4.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18"
