--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "migrate:create": "pnpm exec node-pg-migrate create",
     "migrate:up": "pnpm exec node-pg-migrate up",
     "migrate:down": "pnpm exec node-pg-migrate down",
-    "db:clear": "dotenv -- sh -c 'psql \"$DATABASE_URL\" -c \"TRUNCATE TABLE webhook_agent_links, user_webhooks, webhooks CASCADE;\"'"
+    "db:clear": "dotenv -- sh -c 'psql \"$DATABASE_URL\" -c \"TRUNCATE TABLE webhook_agent_links, user_webhooks, webhooks CASCADE;\"'",
+    "build:docs": "redocly build-docs openapi.json -o ../webhook-tool-web/public/api-docs/index.html"
   },
   "keywords": [
     "webhook",
@@ -38,6 +39,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@redocly/cli": "^1.34.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.17.31",
     "@types/pg": "^8.11.14",
