[Feat] Add get user created webhooks route

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,8 @@ DATABASE_URL=
 
 # Google Cloud Project ID (for Secret Manager)
 GOOGLE_PROJECT_ID=
-
-# Google Cloud Service Credentials (for Secret Manager)
 GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_CREDENTIALS_JSON=
 
 # Public base URL where webhook providers will send events to this service
 # Example: https://your-service-domain.com/api/incoming-webhooks
@@ -15,3 +14,6 @@ WEBHOOK_URL=
 
 # Port for the Express server
 # PORT=3001
+
+# Service API key
+WEBHOOK_STORE_API_KEY=
