--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "pgvector",
     "postgres",
     "typescript",
-    "express",
-    "google-secret-manager"
+    "express"
   ],
   "author": "Agent Base",
   "license": "MIT",
   "dependencies": {
-    "@agent-base/api-client": "^0.25.0",
-    "@agent-base/types": "^0.27.0",
-    "@google-cloud/secret-manager": "^5.6.0",
+    "@agent-base/api-client": "^0.28.0",
+    "@agent-base/secret-client": "^0.6.0",
+    "@agent-base/types": "^0.32.0",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
