--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   "author": "Agent Base",
   "license": "MIT",
   "dependencies": {
-    "@agent-base/api-client": "^0.28.0",
-    "@agent-base/secret-client": "^0.6.0",
-    "@agent-base/types": "^0.32.0",
+    "@agent-base/api-client": "^0.29.0",
+    "@agent-base/secret-client": "^0.10.0",
+    "@agent-base/types": "^0.35.0",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "openai": "^4.98.0",
     "pg": "^8.15.5",
     "pgvector": "^0.1.8",
     "uuid": "^11.1.0",
