--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "author": "Agent Base",
   "license": "MIT",
   "dependencies": {
-    "@agent-base/api-client": "^0.29.0",
-    "@agent-base/secret-client": "^0.10.0",
-    "@agent-base/types": "^0.35.0",
+    "@agent-base/api-client": "workspace:*",
+    "@agent-base/secret-client": "workspace:*",
+    "@agent-base/types": "workspace:*",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
