--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "author": "Agent Base",
   "license": "MIT",
   "dependencies": {
-    "@agent-base/api-client": "workspace:*",
-    "@agent-base/secret-client": "workspace:*",
-    "@agent-base/types": "workspace:*",
+    "@agent-base/api-client": "^0.29.0",
+    "@agent-base/secret-client": "^0.10.0",
+    "@agent-base/types": "^0.35.0",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
@@ -59,5 +59,12 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "pnpm": {
+    "overrides": {
+      "@agent-base/api-client": "workspace:*",
+      "@agent-base/secret-client": "workspace:*",
+      "@agent-base/types": "workspace:*"
+    }
   }
 }
