[Feat] Deploy with Docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,44 +1,14 @@
-# Git
-.git
-.gitignore
-
-# Node.js
 node_modules
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-.pnpm-debug.log
-
-# Build artifacts
-dist
-build
-*.tsbuildinfo
-
-# Development/Environment
-.env
-.env.*
-!.env.example
-*.local
-
-# Testing
-coverage
-.nyc_output
-
-# Editor directories
+.git
+.github
 .vscode
-.idea
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Logs
-logs
+npm-debug.log
+dist
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 *.log
-
-# Misc
-README.md
-LICENSE
-.github 
+*.md
+!README.md 
