--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-prettier": "^5.2.6",
     "node-pg-migrate": "^7.9.1",
     "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
